css/style.css
*, *::before, *::after {
  box-sizing: border-box;
}

body {
  font-family: 'Roboto', sans-serif;
  background-color: #85419E;
  font-size: 20px;
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  scroll-behavior: smooth;
}

h1, h2, h3, h4, h5, h6 {
  font-family: 'Open Sans', sans-serif;
  font-variant: small-caps;
  font-size: 50px;
  margin: 30px;
  color: white;
  text-align: center;
}

section, article {
  padding-top: 150px;
}

/* HEADER */

#hero, footer {
  text-align: center;
}

header {
  padding: 10px;
  width: 100%;
  height: 200px;
}

#logo img {
  position: absolute;
  width: 100px;
  border-radius: 50%;
  z-index: 12;
}

#main-nav, #mobile-nav {
  font-variant: small-caps;
  color: white;
}

#main-nav {
  display: none;
}

#mobile-nav {
  position: fixed;
  font-size: 2em;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: none;
  flex-direction: column;
  justify-content: center;
  background-color:#7C9E31;
  z-index: 11;
}

#nav-links {
  list-style: none;
  text-align: center;
  padding: 0;
}

#mobile-nav li {
  margin: 2em;
}

#nav-links li a {
  text-decoration: none;
  color: white;
}

#nav-links li a:hover {
  background-color: black;
}

a.open-nav, a.close-nav {
  display: block;
  position: fixed;
  top: 15px;
  right: 15px;
  width: 60px;
  height: 50px;
  background-color:#7C9E31;
  border-radius: .3em;
  z-index: 11;
}

a.close-nav {
  display: none;
}

.toggle {
  display: block;
  position: relative;
  width: 30px;
  height: 5px;
  border-radius: 1rem;
  background-color: white;
  margin: 17.5px auto;
}

a.open-nav .toggle::before, a.close-nav .toggle::before {
  content: '';
  display: block;
  position: absolute;
  top: 10px;
  width: 30px;
  height: 5px;
  border-radius: 1rem;
  background-color: white;
}

#header:target a.open-nav {
  display: none;
}

#header:target a.close-nav {
  display: block;
}

#header:target a.close-nav .toggle {
  transform: translateY(5px) rotate(45deg);
}

#header:target a.close-nav .toggle::before {
  transform: translateY(-10px) rotate(-90deg);
}

#header:target #mobile-nav {
  display: flex;
}

#header:target #logo img {
  position: fixed;
}

/* HERO SECTION */

#hero {
  background-color: #CD78EB;
  width: 70%;
  padding: 20px;
  margin: 20px auto;
  font-weight: bolder;
  color: black;
  border-radius: .5em;
  border: 1px solid rgba(0, 0, 0, 0.4);
}

#hero img{
  width: 500px;
  max-width: 100%;
}

/* BIO SECTION */

#bio {
  text-align: center;
}

#bio .subject {
  margin-top: 100px;
  font-size: 33px;
  font-variant: small-caps;
  color: black;
}

#bio .answer, #directions {
  background-color: #CD78EB;
  max-width: 600px;
  width: 95%;
  padding: 20px;
  width: fit-content;
  border-radius: .5em;
  margin: auto;
}

/* HOBBIES SECTION */

#hobbies {
  margin: auto;
  display: flex;
  flex-direction: column;
  max-width: 430px;
  width: 95%;
}

#hobbies h2 {
  margin-bottom: 20px;
}

#hobbies div {
  margin: auto;
  color: white;
  text-align: right;
}

#hobbies ul {
  display: flex;
  flex-direction: column;
}

#hobbies li:nth-child(2n) {
  font-weight: 900;
  color: rgb(167, 255, 255);
  font-size: 30px;
  text-decoration: underline;
  text-decoration-style: dotted;
  text-decoration-thickness: 4px;
}

#hobbies li:nth-child(2n + 1) {
  color: rgb(255, 183, 149); 
  font-variant: small-caps;
  font-size: 30px;
  font-weight: 800;
  text-shadow: 10px 20px #d1f08e;
}

#hobbies li:last-child {
  height: 150px;
  margin-bottom: 0;
}

audio {
  display: block;
  margin: 50px auto;
}

#hobbies li {
  position: relative;
  font-size: 25px;
  list-style: none;
  margin-bottom: 80px;
}

#hobbies li::before {
  content: '';
  display: inline-block;
  position: relative;
  top: .25em;
  width: 0;
  height: 0;
  border-top: 20px solid transparent;
  border-left: 40px solid #7C9E31;
  border-bottom: 20px solid transparent;
  margin-right: .5em;
}

/* PHOTO GALLERY */

#gallery {
  width: 95%;
  margin: auto;
  text-align: center;
  border-radius: .5em;
  padding: 20px;
  background-color: #CD78EB;
}

#gallery h2 {
  margin: 50px auto;
  color: black;
}

figure img {
  border: 10px double black;
  max-width: 100%;
  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.473);
}

figcaption {
  padding: 15px;
  margin: 20px auto;
  border-radius: .5em;
}

hr {
  font-weight:900;
  color: #c7eb78;
}

/* LIT SECTION */

#lit {
  margin: auto;
  max-width: 800px;
  width: 95%;
  background-color: #CD78EB;
  padding: 2rem 2rem;
  border-radius: .5em;
}

#lit h2 {
  color: black;
  text-align: center;
  margin: 0;
  padding: 0;
}

#lit p:first-child:first-letter {
  float: left;
  font-size: 120px;
  padding: 20px;
  margin: 10px;
  background-color: #7C9E31;
  border-radius: 50% 40% 60% 50%;
  border: 5px double #85419E;
  font-family: 'Open Sans', sans-serif;
}

/* FORM SECTION */

#form {
  max-width: 800px;
  width: 95%;
  margin: auto;
  color: white;
}

fieldset {
  border-radius: .5em;
  border: 5px double black;
}

legend {
  background-color: #CD78EB;
  color: black;
  border-radius: .5em;
  padding: 10px;
}

#form-elements {
  display: grid;
  row-gap: 15px;
}

#form-elements label {
  font-size: 22px;
  position: relative;
}

#form-elements input, 
#form-elements select, 
#form-elements textarea,
#form-elements button {
  padding: 12px 7px;
  font-size: 18px;
  background-color: #7C9E31;
  border-radius: .5em;
  border: none;
  margin: 0;
}

#form-elements button {
  margin: auto;
  background-color: #7C9E31;
  color: black;
  font-family: 'Open Sans', sans-serif;
  font-variant: small-caps;
  font-size: 2em;
}

#form-elements button:hover, #form-elements button:active {
  color: white;
  background-color: black;
  cursor: pointer;
}

#form-elements textarea {
  resize: vertical;
}

#form ul {
  list-style: none;
  margin-left: 0;
}

#form li {
  margin: 20px;
}

li input {
  opacity: 0;
}

li label::before {
  content: '';
  display: inline-block;
  position: absolute;
  left: -50px;
  width: 30px;
  height: 30px;
  border-radius: 50%;
  background-color: #7C9E31;
}

li input:checked + label::after {
  content: '';
  display: inline-block;
  position: absolute;
  left: -44px;
  top: 25%;
  width: 18px;
  height: 18px;
  border-radius: 50%;
  background-color: black;
}


/* MUSIC SECTION */

#directions {
  margin: auto;
  text-align: center;
}

#music {
  background-color: #CD78EB;
  font-size: 16px;
  width: 100%;
  height: auto;
  margin: 50px auto;
  padding: 10px;
  border-radius: .5em;
}


.mi {
  align-self: flex-start;
}

.fa, .se, .sol, .si, .la, .li, .ti, .fi, .le, #mi, #do {
  align-self: end;
}

.do {
  align-self: center;
}

.ra {
  align-self: flex-start;
}

.a-section, .b-section {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  font-size: 20px;
  min-height: 300px;
  width: 100%;
  margin: 100px auto;
  gap: 2px;
  padding: 5px;
  border-radius: .5em;
}

.a-section {
  background-color: white;
}

.b-section {
  background-color:#d1f08e; 
}

.a-section span, .b-section span {
  border-bottom: 40px solid transparent;
}

/* VIDEO SECTION */
#video-container {
  position: relative;
  padding-bottom: 80%;
  padding-top: 25px;
  height: 0px;
}

#myVideo {
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  height: 100%;
  width: 100%;
}

#video figcaption {
  text-align: center;
  background-color: #CD78EB;
  width: 95%;
}

#back-to-top {
  display: none;
}

/* FOOTER SECTION */

footer {
  padding: 30px;
  color: white;
  display: flex;
  flex-direction: column;
  font-size: .8em;
}

/*MEDIA QUERIES */

@media screen and (min-width: 60em) {
  #back-to-top {
    display: block;
    position: fixed;
    bottom: 0;
    right: 0;
    padding: 15px;
    z-index: 10;
  }
  
  #back-to-top img:hover, #back-to-top img:active {
    background-color: white;
    border-radius: 100%;
  }

  fieldset {
    margin: 1em;
  }

  #form-elements {
    margin: 1em;
  }

  #mobile-nav, a.open-nav, a.close-nav {
    display: none;
  }

  #main-nav {
    display: block;
    font-size: 1em;
    position: absolute;
    top: 1em;
    right: 0;
    width: fit-content;
    padding: 0 2em;
    background-color:#7C9E31;
  }

  #nav-links {
    display: flex;
    gap: 2em;
  }

  h1, h2, h3, h4, h5, h6 {
    font-size: 70px;
  }

  figure {
    display: grid;
    grid-template-columns: 2fr 1fr;
    column-gap: 0;
  }

  figcaption {
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 1.5rem;
    margin: auto;
    margin-left: 3rem;
  }

  #lit {
    max-width: 100%;
    columns: 25rem;
  }

  /* .a-section, .b-section {
    min-height: 200px;
    font-size: 23px;
    background-color: initial;
  } */

  #hobbies {
    margin-right: auto;
    margin-left: auto;
  }

}

@media screen and (min-width: 100em) {

  #gallery {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
  }

  #gallery h2 {
    grid-column: 1/-1;
  }

  hr {
    display: none;
  }

  figure {
    display: block;
  }

  figcaption {
    margin: 2rem auto 0 auto;
    max-width: 500px;
  }

  #bio {
    display: grid;
    grid-template-columns: 1fr 1fr;
  }

  #bio h2 {
    grid-column: 1/3;
  }

  #hobbies {
    max-width: 90%;
    display: block;
  }

  #hobbies ul {
    display: grid;
    grid-template-columns: 1fr 1fr;
  }

  #hobbies li {
    text-align: center;
  }

  audio {
    margin: 50px 0 0 400px;
  }

  #video-container {
    width: 50%;
    padding-bottom: 40%;
    margin: auto;
  }
}

